# clip-image-search-engine

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  sport-model.py
archive/: EfficientNetB3-sports-0.97.h5
docs/: conf.py  contributing.md  index.rst  license.rst  readme.md
docs/source/: ipoly.LaTeX.rst  ipoly.communication.rst  ipoly.file_management.rst  ipoly.logger.rst  ipoly.ml.rst  ipoly.rst  ipoly.scraping.rst  ipoly.traceback.rst  modules.rst
image_seeker/: __init__.py  engine.py
image_seeker/imagenet-sample/: info.json  labels.json
model/: clip_mode5.pt
